src/test/resources/parse/reject/noSemicolonVariableDeclaration.ul
int bar ()
{
    int id1
}
